fix(user groups): correct the html of user group selection dialog
Related to CAM-3372

--- a/client/client/scripts/pages/create-group-membership.html
+++ b/client/client/scripts/pages/create-group-membership.html
@@ -18,7 +18,7 @@
     </thead>
     <tbody>
       <tr ng-repeat="group in availableGroups">
-        <td class="row-select checkbox">
+        <td class="row-select">
           <input type="checkbox"
                  ng-model="group.checked" />
         </td>
