feat(touch icons): add touch icons and review index html
This commit also removes some unused files (since bootstrap upgrade).

Related to: CAM-3327

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge" />
+
     <title>camunda Cockpit</title>
 
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="camunda Cockpit" />
-    <meta name="author" content="camunda services GmbH" />
+    <meta name="description"
+          content="camunda Cockpit" />
+    <meta name="author"
+          content="camunda services GmbH" />
 
     <!-- settings the base path for relative links -->
-    <base href="$BASE" cockpit-api="$APP_ROOT/api/cockpit/" engine-api="$APP_ROOT/api/engine/" app-root="$APP_ROOT" />
+    <base href="$BASE"
+          cockpit-api="$APP_ROOT/api/cockpit/"
+          engine-api="$APP_ROOT/api/engine/"
+          app-root="$APP_ROOT" />
 
     <!-- an example of plugin/feature exclusion -->
     <!--
@@ -24,10 +32,21 @@
 
 
     <!-- styles -->
-    <link href="$APP_ROOT/app/cockpit/styles/styles.css?bust=CACHE_BUSTER" rel="stylesheet" />
+    <link href="$APP_ROOT/app/cockpit/styles/styles.css"
+          rel="stylesheet" />
 
     <!-- favicon -->
-    <link href="$APP_ROOT/app/cockpit/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link rel="shortcut icon"
+          href="$APP_ROOT/app/cockpit/assets/images/favicon.ico"
+          type="image/x-icon" />
+    <link rel="apple-touch-icon"
+          href="$APP_ROOT/app/cockpit/assets/images/camunda.60.png" />
+    <link rel="apple-touch-icon"
+          sizes="72x72"
+          href="$APP_ROOT/app/cockpit/assets/images/camunda.72.png" />
+    <link rel="apple-touch-icon"
+          sizes="114x114"
+          href="$APP_ROOT/app/cockpit/assets/images/camunda.114.png" />
 
   </head>
   <body>
