--- a/client/client/index.html
+++ b/client/client/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="X-UA-Compatible"
+        content="IE=edge" />
+
   <title>camunda Tasklist</title>
 
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="camunda Tasklist" />
-  <meta name="author" content="camunda services GmbH" />
+  <meta name="description"
+        content="camunda Tasklist" />
+  <meta name="author"
+        content="camunda services GmbH" />
 
   <!--< base href="/" /> -->
   <base href="$BASE"
@@ -17,18 +22,30 @@
         app-root="$APP_ROOT"
         app-name="tasklist" />
 
-  <link rel="stylesheet" type="text/css" href="$APP_ROOT/app/tasklist/styles/styles.css">
-  <link rel="stylesheet" type="text/css" href="$APP_ROOT/app/tasklist/styles/user-styles.css">
+  <link rel="stylesheet"
+        type="text/css"
+        href="$APP_ROOT/app/tasklist/styles/styles.css">
+  <link rel="stylesheet"
+        type="text/css"
+        href="$APP_ROOT/app/tasklist/styles/user-styles.css">
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
   <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <link rel="shortcut icon" href="$APP_ROOT/app/tasklist/favicon.ico">
-  <link rel="apple-touch-icon" href="$APP_ROOT/app/tasklist/images/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="$APP_ROOT/app/tasklist/images/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="$APP_ROOT/app/tasklist/images/apple-touch-icon-114x114.png">
+  <!-- favicon -->
+  <link rel="shortcut icon"
+        href="$APP_ROOT/app/tasklist/assets/images/favicon.ico"
+        type="image/x-icon" />
+  <link rel="apple-touch-icon"
+        href="$APP_ROOT/app/tasklist/assets/images/camunda.60.png" />
+  <link rel="apple-touch-icon"
+        sizes="72x72"
+        href="$APP_ROOT/app/tasklist/assets/images/camunda.72.png" />
+  <link rel="apple-touch-icon"
+        sizes="114x114"
+        href="$APP_ROOT/app/tasklist/assets/images/camunda.114.png" />
 
 </head>
 
