--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -34,6 +34,9 @@
     <!-- styles -->
     <link href="$APP_ROOT/app/cockpit/styles/styles.css"
           rel="stylesheet" />
+    <link rel="stylesheet"
+          type="text/css"
+          href="$APP_ROOT/app/cockpit/styles/user-styles.css">
 
     <!-- favicon -->
     <link rel="shortcut icon"
