impr(HTML): remove js shortening and style templates
Related to CAM-2068, CAM-3414

--- a/client/webapp/src/main/resources-plugin/standaloneTask/app/navbar/action/cam-tasklist-navbar-action-create-task-plugin.html
+++ b/client/webapp/src/main/resources-plugin/standaloneTask/app/navbar/action/cam-tasklist-navbar-action-create-task-plugin.html
@@ -1,5 +1,5 @@
 <a href
    ng-click="open()">
-  <i class="glyphicon glyphicon-plus-sign"></i>
+  <span class="glyphicon glyphicon-plus-sign"></span>
   {{ 'CREATE_TASK' | translate }}
 </a>
