--- a/client/webapp/src/main/resources-plugin/standaloneTask/app/navbar/action/modals/cam-tasklist-create-task-modal.html
+++ b/client/webapp/src/main/resources-plugin/standaloneTask/app/navbar/action/modals/cam-tasklist-create-task-modal.html
@@ -1,12 +1,15 @@
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/standaloneTask/app/navbar/action/modals/cam-tasklist-create-task-modal.html -->
 <div class="modal-header">
-  <h3 class="modal-title">{{ 'CREATE_TASK' | translate }}</h3>
+  <h3 class="cam-tasklist-create-task modal-title">{{ 'CREATE_TASK' | translate }}</h3>
 </div>
 
 <div class="modal-body">
 
   <div notifications-panel></div>
 
-  <form class="form-horizontal" name="newTaskForm" role="form">
+  <form class="form-horizontal"
+        name="newTaskForm"
+        role="form">
     <div ng-init="setNewTaskForm(this.newTaskForm)"></div>
 
     <div class="form-group">
@@ -20,7 +23,8 @@
                type="text" />
         <span ng-if="this.newTaskForm.taskName.$invalid && this.newTaskForm.taskName.$dirty"
               class="has-error">
-          <span ng-show="this.newTaskForm.taskName.$error.required" class="help-block">
+          <span ng-show="this.newTaskForm.taskName.$error.required"
+                class="help-block">
             {{ 'REQUIRED_FIELD' | translate }}
           </span>
         </span>
@@ -74,3 +78,4 @@
 
   </div>
 </div>
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/standaloneTask/app/navbar/action/modals/cam-tasklist-create-task-modal.html -->
