--- a/client/client/scripts/pages/groupCreate.html
+++ b/client/client/scripts/pages/groupCreate.html
@@ -57,13 +57,17 @@
 
         <div class="form-group">
           <div class="col-sm-8 col-sm-offset-4">
-            <a class="btn"
-               href="#/groups">Cancel</a>
+            <a class="btn btn-default"
+               href="#/groups">
+              Cancel
+            </a>
 
             <button type="submit"
                     class="btn btn-primary"
                     data-ng-disabled="!createGroupForm.$valid"
-                    data-ng-click="createGroup()">Create new Group</button>
+                    data-ng-click="createGroup()">
+              Create new Group
+            </button>
           </div>
         </div>
 
