--- a/client/client/scripts/pages/setup.html
+++ b/client/client/scripts/pages/setup.html
@@ -4,7 +4,7 @@
            ng-switch on="created">
     <div class="row">
       <div class="page-header">
-        <h1><i class="glyphicon glyphicon-user-large"></i> Setup</h1>
+        <h1><span class="glyphicon glyphicon-user-large"></span> Setup</h1>
       </div>
     </div>
 
