--- a/client/client/scripts/pages/systemSettingsGeneral.html
+++ b/client/client/scripts/pages/systemSettingsGeneral.html
@@ -3,14 +3,8 @@
   <legend>General Settings</legend>
 
   <div class="alert alert-success">
-    <span><i class="glyphicon glyphicon-thumbs-up"></i>
-    <strong>
-      Process engine
-    </strong>
-      <code>{{processEngineName}}</code>
-      is up and running.
-
+    <span class="glyphicon glyphicon-thumbs-up"></span>
+    <strong>Process engine</strong> <code>{{processEngineName}}</code> is up and running.
   </div>
-
 </form>
 <!-- / CE - camunda-admin-ui/client/scripts/pages/systemSettingsGeneral.html -->
