--- a/client/client/scripts/pages/userCreate.html
+++ b/client/client/scripts/pages/userCreate.html
@@ -3,7 +3,7 @@
   <section id="users">
     <div class="row">
       <div class="page-header">
-        <h1><i class="glyphicon glyphicon-user-large"></i> Create New User</h1>
+        <h1><span class="glyphicon glyphicon-user-large"></span> Create New User</h1>
       </div>
     </div>
     <div class="row">
@@ -137,7 +137,7 @@
 
         <div class="form-group">
           <div class="col-sm-8 col-sm-offset-4">
-            <a class="btn"
+            <a class="btn btn-default"
                href="#/users">Cancel</a>
 
             <button type="submit"
