--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -56,16 +56,16 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-header">
         <button type="button"
-                class="navbar-toggle collapsed"
-                data-toggle="collapse"
-                data-target="#navbar-collapse">
+                class="navbar-toggle collapsed">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
 
-        <a class="navbar-brand" href="#/">
+        <a class="navbar-brand"
+           href="#/"
+           title="camunda Admin">
           camunda Admin
         </a>
       </div>
@@ -116,7 +116,7 @@
              sem-show-user-actions
              class="dropdown-toggle"
              data-toggle="dropdown">
-            <i class="glyphicon glyphicon-user "></i>
+            <span class="glyphicon glyphicon-user "></span>
             {{ authentication.name }}
           </a>
 
@@ -148,8 +148,8 @@
              sem-show-applications
              class="dropdown-toggle"
              data-toggle="dropdown">
-            <i class="glyphicon glyphicon-home"></i>
-            <b class="caret"></b>
+            <span class="glyphicon glyphicon-home"></span>
+            <span class="caret"></span>
           </a>
 
           <ul class="dropdown-menu dropdown-menu-right">
