--- a/client/client/scripts/pages/userEdit.html
+++ b/client/client/scripts/pages/userEdit.html
@@ -3,7 +3,7 @@
   <section id="users">
     <div class="row">
       <div class="page-header">
-        <h1><i class="glyphicon glyphicon-user-large"></i> {{user.firstName}} {{user.lastName}}</h1>
+        <h1><span class="glyphicon glyphicon-user-large"></span> {{user.firstName}} {{user.lastName}}</h1>
       </div>
     </div>
 
@@ -14,10 +14,12 @@
             <li ng-class="activeClass('profile')">
               <a href="#/users/{{user.id | escape}}?tab=profile">Profile</a>
             </li>
+
             <li ng-class="activeClass('account')"
                 ng-show="availableOperations.update">
               <a href="#/users/{{user.id | escape}}?tab=account">Account</a>
             </li>
+
             <li ng-class="activeClass('groups')">
               <a href="#/users/{{user.id | escape}}?tab=groups">Groups</a>
             </li>
@@ -30,7 +32,8 @@
         <div ng-show="show('profile')">
           <div class="box">
             <p ng-if="!profile">
-              <i class="glyphicon glyphicon-loading"></i> loading profile...
+              <span class="glyphicon glyphicon-loading"></span>
+              loading profile...
             </p>
 
             <form class="form-horizontal"
@@ -106,9 +109,11 @@
                      ng-show="availableOperations.update">
                   <div class="col-sm-8 col-sm-offset-4">
                     <button type="submit"
-                            class="btn"
-                            data-ng-disabled="!canSubmit(editProfileForm, 'profile')"
-                            data-ng-click="updateProfile()">Update Profile</button>
+                            class="btn btn-default"
+                            ng-disabled="!canSubmit(editProfileForm, 'profile')"
+                            ng-click="updateProfile()">
+                      Update Profile
+                    </button>
                   </div>
                 </div>
 
@@ -118,9 +123,9 @@
           </div>
         </div>
 
-        <div ng-show="show('account')"
-            ng-show="availableOperations.update">
-          <div class="box">
+        <div ng-show="show('account')">
+          <div class="box"
+               ng-show="availableOperations.update">
             <form class="form-horizontal"
                   name="updateCredentialsForm">
 
@@ -131,10 +136,15 @@
               <div class="form-group">
                 <label class="control-label col-sm-4"
                        for="inputAuthenticationUserPassword"
-                       ng-if="userId === authenticatedUser">Old Password*:</label>
+                       ng-if="userId === authenticatedUser">
+                  Old Password*:
+                </label>
+
                 <label class="control-label col-sm-4"
                        for="inputAuthenticationUserPassword"
-                       ng-if="userId !== authenticatedUser">My Password*:</label>
+                       ng-if="userId !== authenticatedUser">
+                  My Password*:
+                </label>
 
                 <div class="col-sm-8">
                   <input id="inputAuthenticationUserPassword"
@@ -188,27 +198,30 @@
               <div class="form-group">
                 <div class="col-sm-8 col-sm-offset-4">
                   <button type="submit"
-                          class="btn"
-                          data-ng-disabled="!canSubmit(updateCredentialsForm)"
-                          data-ng-click="updateCredentials()">Change Password</button>
+                          class="btn btn-default"
+                          ng-disabled="!canSubmit(updateCredentialsForm)"
+                          ng-click="updateCredentials()">Change Password</button>
                 </div>
               </div>
 
             </form>
           </div>
+
           <div class="box"
                ng-show="availableOperations.delete">
             <form class="form-horizontal">
 
               <legend>Delete User</legend>
+
               <div class="alert alert-danger">
                 <strong>Warning:</strong> deleting a user account cannot be undone.
               </div>
 
               <button type="submit"
                       class="btn btn-danger"
-                      data-ng-click="deleteUser()">Delete User</button>
-
+                      ng-click="deleteUser()">
+                Delete User
+              </button>
             </form>
           </div>
         </div>
@@ -225,40 +238,47 @@
                    auth-permission="CREATE"
                    auth-resource-name="group membership">
                 <a class="btn btn-default pull-right"
-                   data-ng-click="openCreateGroupMembershipDialog()">
-                  <i class="glyphicon glyphicon-plus"></i>
+                   ng-click="openCreateGroupMembershipDialog()">
+                  <span class="glyphicon glyphicon-plus"></span>
                   Add
                 </a>
               </div>
 
-              <table class="table table-condensed table-striped"
+              <table class="cam-table"
                      ng-hide="groupList.length == 0">
                 <thead>
                   <tr>
-                    <th><!-- icons --></th>
-                    <th>Group Id</th>
-                    <th>Group Name</th>
-                    <th>Group Type</th>
-                    <th ng-show="availableOperations.removeGroup"><!-- actions --></th>
+                    <th class="icon"><!-- icons --></th>
+                    <th class="group-id">Group Id</th>
+                    <th class="group-name">Group Name</th>
+                    <th class="group-type">Group Type</th>
+                    <th class="action"
+                        ng-show="availableOperations.removeGroup"><!-- actions --></th>
                   </tr>
                 </thead>
+
                 <tbody>
                   <tr ng-repeat="group in groupList">
-                    <td>
+                    <td class="icon">
                       <!-- add group icon here -->
                     </td>
-                    <td>
+
+                    <td class="group-id">
                       <a href="#/groups/{{group.id | escape}}?tab=group">{{group.id}}</a>
                     </td>
-                    <td>
+
+                    <td class="group-name">
                       {{group.name}}
                     </td>
-                    <td>
+
+                    <td class="group-type">
                       {{group.type}}
                     </td>
-                    <td ng-show="availableOperations.removeGroup">
+
+                    <td class="action"
+                        ng-show="availableOperations.removeGroup">
                       <a class="btn btn-default btn-sm"
-                         data-ng-click="removeGroup(group.id)">Remove</a>
+                         ng-click="removeGroup(group.id)">Remove</a>
                     </td>
                   </tr>
                 </tbody>
